# rust-metadata

./: .gitignore  Cargo.toml  README.md  README.zh_CN.md  coverage.sh  rustfmt.toml  style-check.sh
.rs-ci/: README.md  README.zh_CN.md  ci-check.sh  style-check.sh
src/: condition.rs  filter.rs  lib.rs  metadata.rs  metadata_error.rs  metadata_filter.rs  metadata_result.rs  metadata_value_type.rs
src/filter/: condition.rs  condition_wire.rs  filter_expr.rs  filter_expr_wire.rs  filter_match_options.rs  legacy_filter_expr.rs  legacy_metadata_filter_wire.rs  metadata_filter.rs  metadata_filter_builder.rs  metadata_filter_input.rs  metadata_filter_wire.rs  missing_key_policy.rs  mod.rs  number_comparison_policy.rs
src/filter/wire/: condition_wire.rs  expr.rs  filter_expr_wire.rs  metadata_filter.rs  metadata_filter_wire.rs  mod.rs
src/schema/: definition.rs  field.rs  filter_validation.rs  metadata_field.rs  metadata_schema.rs  metadata_schema_builder.rs  mod.rs  unknown_field_policy.rs
tests/: condition_tests.rs  filter_tests.rs  lib_tests.rs  metadata_error_tests.rs  metadata_filter_builder_tests.rs  metadata_result_tests.rs  metadata_schema_tests.rs  metadata_tests.rs  mod.rs  schema_tests.rs  test_condition.rs  test_filter.rs  test_metadata.rs  test_metadata_filter.rs  test_metadata_value_type.rs
tests/filter/: condition_tests.rs  filter_match_options_tests.rs  filter_test_support.rs  metadata_filter_builder_tests.rs  metadata_filter_core_tests.rs  metadata_filter_serde_tests.rs  metadata_filter_tests.rs  missing_key_policy_tests.rs  mod.rs  number_comparison_policy_tests.rs
tests/filter/wire/: metadata_filter_serde_tests.rs  mod.rs
tests/schema/: filter_validation_tests.rs  metadata_field_tests.rs  metadata_schema_builder_tests.rs  metadata_schema_tests.rs  mod.rs  unknown_field_policy_tests.rs
tests/support/: test_support.rs
