[package]
name = "qubit-metadata"
version = "0.2.4"
edition = "2021"
rust-version = "1.70"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-metadata"
description = "Type-safe extensible metadata model for the Qubit LLM SDK"
homepage = "https://github.com/qubit-ltd/rs-metadata"
documentation = "https://docs.rs/qubit-metadata"
readme = "README.md"
keywords = ["metadata", "llm", "qubit", "serde", "filter"]
categories = ["data-structures", "encoding"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_metadata"
doctest = false

[dependencies]
parse-display = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
