[package]
name = "qubit-metadata"
version = "0.4.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-metadata"
description = "Type-safe extensible metadata model for the Qubit LLM SDK"
homepage = "https://github.com/qubit-ltd/rs-metadata"
documentation = "https://docs.rs/qubit-metadata"
readme = "README.md"
keywords = ["metadata", "llm", "qubit", "serde", "filter"]
categories = ["data-structures", "encoding"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_metadata"

[dependencies]
bigdecimal = "0.4"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
qubit-datatype = "0.2"
qubit-value = "0.7"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
